# sfwd

./: .clang-format  CMakeLists.txt  Makefile  README.md  acl.rules  acl_v4.rules  acl_v6.rules  dpdk-forwarder_extended.md  main.c  sfwd.h  sfwd_acl.c  sfwd_acl_scalar.h  sfwd_altivec.h  sfwd_common.h  sfwd_neon.h  sfwd_rlimit.c  sfwd_rlimit.h  sfwd_sse.h  sfwd_stat.c  sfwd_stat.h
demo/: Screencast from 2025-06-05 15-47-05.webm
test/: alloc_hugetlb.sh  replay.sh  run.sh
